--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "minecraft"
   ],
   "author": "kadenscott",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "inquirer": "^7.3.3"
+  }
 }
