--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "startcraft",
   "version": "1.0.0",
   "description": "An easy-to-use CLI program to quickly create Minecraft servers.",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --experimental-json-modules src/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,12 @@
   "author": "kadenscott",
   "license": "MIT",
   "dependencies": {
-    "inquirer": "^7.3.3"
+    "axios": "^0.21.0",
+    "chalk": "^4.1.0",
+    "enquirer": "^2.3.6",
+    "figlet": "^1.5.0",
+    "ora": "^5.1.0"
   },
-  "bin": "./src/index.js"
+  "bin": "./src/index.js",
+  "type": "module"
 }
