--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "startcraft",
   "version": "1.0.0",
   "description": "An easy-to-use CLI program to quickly create Minecraft servers.",
-  "main": "./src/index.js",
+  "main": "./src/index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-json-modules src/index.js"
+    "start": "node src/index.mjs"
   },
   "repository": {
     "type": "git",
@@ -23,6 +22,6 @@
     "figlet": "^1.5.0",
     "ora": "^5.1.0"
   },
-  "bin": "./src/index.js",
+  "bin": "./src/index.mjs",
   "type": "module"
 }
