--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "ora": "^5.1.0"
   },
   "bin": "./src/index.mjs",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
