--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "chalk": "^4.1.0",
     "enquirer": "^2.3.6",
     "figlet": "^1.5.0",
-    "ora": "^5.1.0"
+    "ora": "^5.1.0",
+    "strip-ansi": "^6.0.0"
   },
   "bin": "./src/index.mjs",
   "type": "module",
