--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An easy-to-use CLI program to quickly create Minecraft servers.",
   "main": "./src/index.mjs",
   "scripts": {
-    "start": "node src/index.mjs"
+    "start": "tsc && node dist/index.js",
+    "lint": "eslint \"src/**\" --fix"
   },
   "repository": {
     "type": "git",
@@ -18,16 +19,22 @@
   "dependencies": {
     "axios": "^0.21.0",
     "chalk": "^4.1.0",
+    "common-js": "^0.3.8",
     "enquirer": "^2.3.6",
     "figlet": "^1.5.0",
     "ora": "^5.1.0",
-    "strip-ansi": "^6.0.0"
+    "strip-ansi": "^6.0.0",
+    "typescript": "^4.1.2"
   },
-  "bin": "./src/index.mjs",
-  "type": "module",
+  "bin": "./bist/index.js",
   "devDependencies": {
+    "@types/figlet": "^1.2.1",
+    "@types/node": "^14.14.13",
     "eslint": "^7.15.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "@typescript-eslint/eslint-plugin": "4.8.2",
+    "@typescript-eslint/parser": "4.8.2",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "prettier": "2.2.0"
   }
 }
