--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "strip-ansi": "^6.0.0",
     "typescript": "^4.1.2"
   },
-  "bin": "./bist/index.js",
+  "bin": "./dist/index.js",
   "devDependencies": {
     "@types/figlet": "^1.2.1",
     "@types/node": "^14.14.13",
